reestruturando código para utilizar formato da convensão de um projeto java

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Restaurant-mexican-food</name>
+	<name>restaurant-mexican-food</name>
 	<comment></comment>
 	<projects>
 	</projects>
